--- a/views/user/address.ejs
+++ b/views/user/address.ejs
@@ -10,7 +10,7 @@
         <div class="bg-white py-5 lg:px-52"><!--Top address progress-->
             <div class="flex justify-between px-5">
                 <div class="flex  w-full " id="address">
-                    <a href="/user/buynow" class="flex flex-col items-center space-y-1">
+                    <a href="/user/address" class="flex flex-col items-center space-y-1">
                         <div class=" rounded-full h-5 w-5 border border-[#476B73] flex justify-center items-center "> 
                             <div id="addressSelected" class="h-[14px] w-[14px] bg-[#476B73] rounded-full  "></div> <!--insdie Circle-->
                         </div>
@@ -44,36 +44,38 @@
 
             </div>            
         </div>   
-        <div class="px-4 mt-5 lg:px-52">
-            <div class="bg-white px-3 lg:py-8 py-3 rounded-md flex justify-between items-center">
-                <div class="text-sm space-y-1 lg:text-base">
-                    <p class="font-semibold">Shibil Muhammad</p>
-                    <p>Maadin Edupark</p>
-                    <p>Alathur Padi</p>
-                    <p>Manjeri,676121</p>
-                    <p>Phone number: 8086812602</p>
-                </div>
-                <div>
-                    <div class="flex flex-col space-y-2 lg:space-y-9">
-                        <button class="bg-[#EBEBEB] text-sm px-2 lg:px-4 lg:py-3 py-1 rounded-md font-semibold text-[#55808A] drop-shadow-sm" >Confirm</button>
-                        <button class="bg-[#F6F6F6] text-sm px-4 lg:px-4 lg:py-3  py-1 rounded-md font-semibold text-[#476B73] drop-shadow-sm">Edit</button>
+        <div class="px-4 mt-5 space-y-3 lg:px-52 ">
+            <% address.forEach(function(data){ %>
+                <div class="bg-white px-3 lg:py-8 py-3 rounded-md flex justify-between items-center drop-shadow-sm">
+                    <div class="text-sm space-y-1 lg:text-base">
+                        <p class="font-semibold capitalize"><%=data.name %></p>
+                        <p><%=data.house %></p>
+                        <p><%=data.area %></p>
+                        <p><%=data.town, %>, <%= data.pinCode %></p>
+                        <p>Phone number: <%= data.phone %></p>
                     </div>
-                    
+                    <div>
+                        <div class="flex flex-col space-y-2 lg:space-y-9">
+                            <a href="user/address/<%-data._id %>" class="bg-[#EBEBEB] hover:bg-[#5e8e99] hover:text-[#EBEBEB] hover:scale-105 text-sm px-2 lg:px-4 lg:py-3 py-1 rounded-md font-medium text-[#5e8e99] border-[.2px] border-[#666666] " >Use this</a>
+                            <button class="bg-[#F6F6F6] hover:text-[#F6F6F6] hover:bg-[#476B73] text-sm px-4 lg:px-4 lg:py-3  py-1 rounded-md font-semibold text-[#476B73] border-[.2px] border-[#666666]">Edit</button>
+                        </div>
+                        
+                    </div>
                 </div>
-            </div>
+            <%})%>
+          
             <div class="w-full">
-                <button class="flex justify-between items-center mt-3 bg-white rounded-md w-full px-3">
+                <a href="/user/buynow" class="flex justify-between items-center mt-3 bg-white rounded-md w-full px-3">
                     <p class="font-semibold text-sm">Add new Address</p>
                     <div class=" rounded-[50%] cursor-pointer bg-gray-100 m-[5px] inline-block">
                         <span class="material-symbols-outlined  text-center h-5 w-5 align-middle table-cell text-[#666666] ">
                             chevron_right
                         </span>
                     </div>
-                </button>
+                </a>
             </div>
         </div>
     </main>
 
-    
     <script src="/javascripts/user/stateLoad.js"></script>
 </body>
