--- a/views/partials/user/searchResultInnerData.ejs
+++ b/views/partials/user/searchResultInnerData.ejs
@@ -20,9 +20,9 @@
                         <span class="text-xs py-1 font-bold text-[#008000] lg:text-sm"><%= data.discount %>% off</span> <span class="text-xs text-[#666666] line-through lg:text-sm"><%= data.MRP %></span> <span class="text-xs font-bold lg:text-sm"><%= data.salePrice %></span></div>
                 </div>
                 <div class="w-full px-3 my-2">
-                    <button class="flex justify-center bg-[#DAA520]  hover:bg-[#c4951d] items-center px-2 py-[2px] rounded-lg text-white space-x-[2px] w-full lg:px-2 lg:py-1">
-                        <p class="text-xs lg:text-sm font-medium ">Add to cart</p>
-                        <img class="h-3 lg:h-4" src="/images/shopping-cart white.png" alt="">
+                    <button onclick="addtoCart(event,this)"  data-product-id="<%= data._id %>"  class=" flex justify-center bg-[#DAA520]  hover:bg-[#c4951d] items-center px-2 py-[2px] rounded-lg text-white space-x-[2px] w-full lg:px-2 lg:py-1 add-to-cart-button" >
+                        <p class="text-xs lg:text-sm font-medium cartNotification ">Add to cart</p>
+                        <img class="h-3 lg:h-4 cart-image" src="/images/shopping-cart white.png" alt="">
                     </button>
                 </div>
             </a>
