--- a/views/user/buynow.ejs
+++ b/views/user/buynow.ejs
@@ -1,6 +1,13 @@
 <%-include("../partials/user/head.ejs")%>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 <link rel="stylesheet" href="/css/user/header.css">
+<style>
+      input[type=number]::-webkit-inner-spin-button, 
+    input[type=number]::-webkit-outer-spin-button { 
+        -webkit-appearance: none;
+        appearance: none; 
+    }
+</style>
 <body class="bg-[#F2F2F2] flex flex-col h-screen pb-2 lg:mb-20">
     <%-include('../partials/user/headerPhone.ejs')%>
     <%-include('../partials/user/HeaderDesktopUser.ejs')%>
@@ -46,39 +53,38 @@
         </div>   
         <div class="px-4 mt-5 lg:px-52">
             <p class='font-medium text-xl'>Enter your address</p>
-            <form action="" class="my-3 mt-5 space-y-3">
+            <form action="/user/newAddress" method="post" class="my-3 mt-5 space-y-3">
                 <div class="space-y-1">
-                    <p class="px-2 font-medium text-sm">Full name</p>
-                    <input type="text" class="w-full rounded-lg px-4 py-2 text-xs border-[.1px] border-gray-600" placeholder="Enter first name and last name">
+                    <p class="px-2 font-medium text-sm" >Full name</p>
+                    <input required name="name" type="text" class="w-full rounded-lg px-4 py-2 text-xs border-[.1px] border-gray-600" placeholder="Enter first name and last name">
                 </div>
                 <div class="space-y-1 ">
                     <p class="px-2 font-medium text-sm">Phone number</p>
-                    <input type="text" class="w-full rounded-lg px-4 py-2 text-xs border-[.1px] border-gray-600" placeholder="Enter your mobile number">
+                    <input required name="number" type="text" class="w-full rounded-lg px-4 py-2 text-xs border-[.1px] border-gray-600" placeholder="Enter your mobile number">
                 </div>
                 <div class="space-y-1 ">
                     <p class="px-2 font-medium text-sm">Flat, House no., Building, Company, Apartment</p>
-                    <input type="text" class="w-full rounded-lg px-4 py-2 text-xs border-[.1px] border-gray-600" >
+                    <input required name="house" type="text" class="w-full rounded-lg px-4 py-2 text-xs border-[.1px] border-gray-600" >
                 </div>
                 <div class="space-y-1 ">
-                    <p class="px-2 font-medium text-sm">Area, Street, Sector, Village</p>
-                    <input type="text" class="w-full rounded-lg px-4 py-2 text-xs border-[.1px] border-gray-600" >
+                    <p  class="px-2 font-medium text-sm">Area, Street, Sector, Village</p>
+                    <input required name="area" type="text" class="w-full rounded-lg px-4 py-2 text-xs border-[.1px] border-gray-600" >
                 </div>
                 <div class="space-y-1 ">
                     <p class="px-2 font-medium text-sm">Land mark</p>
-                    <input type="text" class="w-full rounded-lg px-4 py-2 text-xs border-[.1px] border-gray-600" placeholder="Nearby Landmark">
+                    <input required name="landMark" type="text" class="w-full rounded-lg px-4 py-2 text-xs border-[.1px] border-gray-600" placeholder="Nearby Landmark">
                 </div>
                 <div class="space-y-1 ">
                     <p class="px-2 font-medium text-sm">PIN code</p>
-                    <input type="text" class="w-full rounded-lg px-4 py-2 text-xs border-[.1px] border-gray-600" placeholder="Enter 6-digit PIN code">
+                    <input required name="pinCode" type="number" class="w-full rounded-lg px-4 py-2 text-xs border-[.1px] border-gray-600" placeholder="Enter 6-digit PIN code">
                 </div>
                 <div class="space-y-1 ">
                     <p class="px-2 font-medium text-sm">Town/City </p>
-                    <input type="text" class="w-full rounded-lg px-4 py-2 text-xs border-[.1px] border-gray-600" placeholder="">
+                    <input required name="town" type="text" class="w-full rounded-lg px-4 py-2 text-xs border-[.1px] border-gray-600" placeholder="">
                 </div>
                 <div class="space-y-1 ">
                     <label for="state" class="px-2 font-medium text-sm">State </p>
-                    <select name="" id="state" class="w-full rounded-lg px-4 py-2 text-xs border-[.1px] border-gray-600 ">
-
+                    <select required name="state" id="state" class="w-full rounded-lg px-4 py-2 text-xs border-[.1px] border-gray-600 ">
                     </select>
                 </div>
                 <button id="submit" type="submit" class="hidden"></button>
