--- a/views/user/wishList.ejs
+++ b/views/user/wishList.ejs
@@ -40,7 +40,7 @@
                                          </div>
                                     
                                     <div class="w-full  lg:w-fit space-x-3 flex lg:flex-col lg:justify-center lg:space-y-3 lg:items-center text-white">
-                                        <a href="/user/wishlist/remove/<%-data._id %>" class="w-1/2 lg:ml-3 lg:w-fit lg:px-6 text-black border-[#DAA520] border-[.1px] py-1 rounded-md font-semibold">
+                                        <a href="/user/wishlist/remove/<%-data._id %>" class="w-1/2 flex justify-center items-center lg:ml-3 lg:w-fit lg:px-6 text-black border-[#DAA520] border-[.1px] py-1 rounded-md font-semibold">
                                             Remove
                                         </a>
                                         <button class="w-1/2 lg:w-fit lg:px-6 bg-[#DAA520] py-1 rounded-md font-semibold">
